[project]
name = "merge-duplicates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "dbt-postgres (>=1.9.1,<2.0.0)",
    "faker (>=38.0.0,<39.0.0)",
    "polars (>=1.35.2,<2.0.0)",
]

[dependency-groups]
dev = [
    "shandy-sqlfmt>=0.27.0",
    "ruff (>=0.14.0,<0.15.0)",
]

[tool.poetry]
package-mode = false